# minisurf

./: CMakeLists.txt  Config.h  README.md  environment.yml  main.cpp
cgal/: IsosurfaceMesher.cpp  cgal_hole_filling.cpp  cgal_homotopy_utils.cpp  cgal_kd_search.cpp  cgal_remesh.cpp  cgal_utils.h  homotopy_utils.h  igl_utils.cpp  igl_utils.h  mesh_intersection.cpp  mesh_intersection.h
figure/: ablation_experiment.cpp  accurate_membrane_strain.cpp  complex_topology.cpp  convergence_test.cpp  function_pools.cpp  function_pools.h  grad_precondition.cpp  optimal_cond.cpp  revolution_surf.cpp  singularity_surgery.cpp  tailor_asymptotic_property.cpp
flow/: triangle_quadrature.cpp  triangle_quadrature.h
geometry/: Geometry.h  HashTypes.h
geometry/Point/: Point.h
geometry/bbox/: BBox.cpp  BBox.h
geometry/curve/: Curve.cpp  Curve.h  PolyLine.cpp  PolyLine.h
geometry/facet/: BezierTri.cpp  BezierTri.h  Facet.cpp  Facet.h  Plane.h  Quadrature.cpp  Quadrature.h  Rect.cpp  Rect.h  Triangle.cpp  Triangle.h
geometry/grid/: Grid.h  PeriodicGrid.h
geometry/quaternion/: quaternion.h
geometry/surface/: Nurbs.h  mesh.cpp  mesh.h  surface.h
material/: materail.h  material.cpp
matlab/: matlab_utils.h
mesher/: Flag.h  PeriodMeshConvertion.cpp  PeriodMeshConvertion.h  PeriodicMesher.cpp  PeriodicMesher.h  SurfaceMesh.cpp  SurfaceMesh.h  asymptotic_analysis.cpp  asymptotic_analysis.h  asymptotic_stiffness.cpp  conjugate_surf.cpp  dir_utils.cpp  dir_utils.h  fundamental_forms.cpp  fundamental_forms.h  inextensible_displacement.cpp  isosurface_generation.cpp  isosurface_generation.h  meanCurvatureFlow.cpp  membrane_energy.cpp  mesh_surjery.cpp  offset_volume.cpp  period_merge.cpp  period_mesh_genus.cpp  periodic_remesh.cpp  remove_dups.cpp  reorient_mesh.cpp  reorient_mesh.h  sampleMesh.cpp  second_fundamental_form.cpp  skeletonMesher.cpp  skeletonMesher.h  symmetrization.cpp  tictoc.cpp  tictoc.h  willmore_energy.cpp
triangle++/: tpp_delaunay.hpp  tpp_example.cpp  tpp_interface.hpp  triangle_impl.hpp
vdb/: openvdb_wrapper_t.cpp  openvdb_wrapper_t.h
